--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="pancel">
-  <form class="example-form">
-    <mat-form-field class="example-full-width">
+  <form class="form-body">
+    <mat-form-field class="form-full-width">
       <input matInput placeholder="请输入" aria-label="State" [matAutocomplete]="auto" [formControl]="stateCtrl">
       <mat-autocomplete #auto="matAutocomplete">
         <mat-option *ngFor="let state of filteredStates | async" [value]="state.name">
