--- a/src/app/components/owncenter/owncenter.component.html
+++ b/src/app/components/owncenter/owncenter.component.html
@@ -1,13 +1,13 @@
 <form class="form-body" [formGroup]="UserFormInfo">
   <mat-form-field class="form-full-width" >
-    <input matInput placeholder="请输入姓名" formControlName="name" [(ngModel)]="userInfo.cnname" name="cnname"/>
+    <input matInput placeholder="请输入姓名" formControlName="name"/>
     <mat-error>
-      <strong *ngIf="UserFormInfo"></strong>
+      <strong></strong>
     </mat-error>
   </mat-form-field>
  
 
   <mat-form-field class="form-full-width">
-    <textarea matInput placeholder="请输入描述"></textarea>
+    <textarea matInput placeholder="请输入描述" formControlName="remark"></textarea>
   </mat-form-field> 
 </form>
