--- a/src/app/components/owncenter/owncenter.component.html
+++ b/src/app/components/owncenter/owncenter.component.html
@@ -11,3 +11,5 @@
     <textarea matInput placeholder="请输入描述" formControlName="remark"></textarea>
   </mat-form-field> 
 </form>
+
+<button [appPrefixHightlight]="orange">文本高亮</button>
